--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "chokidar": "^1.0.0-rc5",
+    "imgur": "^0.1.5",
     "tumblr": "^0.4.1",
     "tumblr.js": "0.0.4"
   }
